# doc-to-hil-demo

./: .gitignore  DEMO_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
comprehension/: __init__.py  knowledge_graph.py  query.py
dashboard/: app.py  state.json
dashboard/templates/: index.html
docs/: IMPLEMENTATION_PLAN.md  flowchart.html
generators/: __init__.py  test_generator.py
generators/templates/: hil_test_template.py.j2
parsers/: __init__.py  docx_parser.py  excel_parser.py  models.py  orchestrator.py  pdf_parser.py
scripts/: generate_excel.py
sil_harness/: __init__.py  executor.py
sil_harness/traces/: power_mode_trace.json  shift_logic_trace.json
source_documents/excel/: system_requirements.xlsx  test_parameters.xlsx
source_documents/pdf_specs/: pcm_power_modes.extracted.json  pcm_power_modes.md  transmission_shift_logic.extracted.json  transmission_shift_logic.md
source_documents/word_docs/: can_signal_catalog.extracted.json  can_signal_catalog.md  diagnostic_dtc_matrix.extracted.json  diagnostic_dtc_matrix.md
tests/: conftest.py  test_comprehension.py  test_generator.py  test_parsers.py
